--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 123456
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5tGbgnYqUZy3Fzgiid5U
+    access-key-secret: oD9jUaTbT90bkAX5vQrBVSLWYyeIYi
+    bucket-name: skyeatout
