--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -8,6 +8,6 @@ sky:
     password: 123456
   alioss:
     endpoint: oss-cn-beijing.aliyuncs.com
-    access-key-id: LTAI5tGbgnYqUZy3Fzgiid5U
-    access-key-secret: oD9jUaTbT90bkAX5vQrBVSLWYyeIYi
+    access-key-id: xxx
+    access-key-secret: xxx
     bucket-name: skyeatout
